test/typecheck/bad/for_condition.ks
int main()
{
    int a = 10;
    for ( int i = 0; i + 2; i = i + 1 )
    {
        a = a + i;
    }
    return a;
}
